# pyasli

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .ruff.toml  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: check.yaml  release.yaml
.selenoid/: browsers.json
pyasli/: __init__.py  browser.py  bys.py  conditions.py  elements.py  exceptions.py  locators.py  searchable.py  wait.py
pyasli/browsers/: __init__.py  browser_session.py  shared_browser.py
pyasli/elements/: __init__.py  elements.py  locators.py  searchable.py
tests/: conftest.py  pytest.ini
tests/01_browser/: conftest.py  test_browser.py  test_browser_session.py  test_shared_browser.py
tests/02_elements/: conftest.py  test_element.py  test_element_collection.py  test_reprs.py
tests/03_bys/: test_bys.py
tests/04_wait/: test_waits.py
tests/05_conditions/: test_conditions.py
