[tool.poetry]
name = "pyasli"
version = "0.2.8"
description = "(Python) Yet Another Selenium Instruments"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

selenium = "^4.8"
wrapt = "^1.11"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2"
pylint = "^2.3"
pytest = "^7.2"
py = "^1.11.0"
pytest-cov = "^4.0"
ruff = "^0.0.260"
allure-pytest = "^2.6"
pytest-html = "^2.1.1"
requests = "^2.28.2"
webdriver-manager = "^3.8.6"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
